更新部分宠物模块
更新部分宠物模块接口和接口文档
